microservice/ccy_exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-exchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-exchange
    spec:
      containers:
      - name: currency-exchange
        image: in28min/currency-exchange-devops
        imagePullPolicy: IfNotPresent
        ports:
        - name: liveness-port
          containerPort: 8000
        resources: #CHANGE
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi #256Mi 
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  ports:
  - # nodePort: 30702 #CHANGE
    port: 8000 #CHANGE
    protocol: TCP
    targetPort: 8000 #CHANGE
  selector:
    app: currency-exchange
  sessionAffinity: None #CHANGE
  type: LoadBalancer
  #type: NodePort
